# dart-usb-mtp

./: LICENSE  README.md  pubspec.yaml
.github/workflows/: ci.yml  example-android.yml  example-linux.yml  example-windows.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/local/usb_mtp_client/: UsbSyncPlugin.kt
android/src/main/kotlin/dev/local/usb_sync/: UsbSyncPlugin.kt
example/: .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/usb_mtp_client_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/usb_sync_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: usb_mtp_client.dart  usb_sync.dart
lib/src/: models.dart  usb_sync_exception.dart  usb_sync_method_channel.dart  usb_sync_platform_interface.dart
linux/: CMakeLists.txt  usb_mtp_client_plugin.cc  usb_sync_plugin.cc
linux/include/usb_sync/: usb_sync_plugin.h
tools/: artifact_version.sh  package_linux_example.sh  package_windows_example.ps1
windows/: CMakeLists.txt  usb_mtp_client_plugin.cpp  usb_mtp_client_plugin.h  usb_sync_c_api.cpp  usb_sync_plugin.cpp
windows/include/usb_mtp_client/: usb_sync_c_api.h
